# Email-Manager

./: .dockerignore  .env.example  Dockerfile  README.md  api_server.py  app.py  email_client.py  grader.py  inference.py  models.py  openenv.yaml  openenv_agent.py  preferences.py  pyproject.toml  requirements.txt  user_prefs.json  validate.py
email_rectifier/: __init__.py  environment.py
hackathon/: README.md  ai_processor.py  api_server.py  auth.py  openenv_agent.py  pyproject.toml  requirements.txt  run_app.py  users.json  utils.py
hackathon/server/: app.py
hackathon/static/: app.js
static/: style.css
templates/: index.html
