[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "email-rectifier-openenv"
version = "3.0.0"
description = "OpenEnv-compatible email triage RL environment with 3 task difficulties."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Virag" },
]
dependencies = [
  "fastapi>=0.104.0",
  "flask==3.0.3",
  "gunicorn==22.0.0",
  "httpx>=0.25.0",
  "openai>=1.0.0",
  "pydantic>=2.0.0",
  "PyYAML>=6.0",
  "uvicorn>=0.24.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = [
  "api_server",
  "grader",
  "inference",
  "models",
  "validate",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["email_rectifier*", "graders*", "server*", "tasks*"]
